# AMSIsotopeFramework

./: .gitignore  CMakeLists.txt  README.txt  amstreea.C  amstreea.h  readme.txt  results  test_output.root  test_task.json
IsoProcess/: CMakeLists.txt  LinkDef.h  main.cpp  model_data.root  model_mc.root
IsoProcess/include/: BinningManager.h  HistManager.h  IsotopeAnalyzer.h  ProductRegistry.h  RICHCut.h  Tool.h  selectdata.h
IsoProcess/src/: BinningManager.cpp  GAMModel.cpp  HistManager.cpp  IsotopeAnalyzer.cpp  ModelManager.cpp  ProductRegistry.cpp  RTICut.cpp  TrackerCut.cpp  basic_var.cpp  selectdata.cpp
SampleProduction/: CMakeLists.txt  README.txt  main.cpp
SampleProduction/include/: BinningManager.h  GAMModel.h  HistManager.h  IsotopeAnalyzer.h  ModelManager.h  ProductRegistry.h  RTICut.h  TOFCut.h  TrackerCut.h  basic_var.h  rich_var.h  selectdata.h  tracker_var.h
SampleProduction/src/: BinningManager.cpp  HistManager.cpp  IsotopeAnalyzer.cpp  ProductRegistry.cpp  RICHCut.cpp  TOFCut.cpp  Tool.cpp  selectdata_iss.cpp  selectdata_mc.cpp
apps/: CMakeLists.txt
apps/process/: CMakeLists.txt
apps/process/src/: main.cpp
config/: config_v1.0.yaml  config_v1.4_local_test.yaml  test_config.yaml
libs/: CMakeLists.txt
libs/IsoToolbox/: CMakeLists.txt
libs/IsoToolbox/include/IsoToolbox/: AnalysisContext.h  BinningManager.h  ConfigManager.h  Logger.h  PhysicsConstants.h  ProductRegistry.h  SplineFitter.h  Tools.h
libs/IsoToolbox/include/IsoToolbox/impl/: Logger_impl.h
libs/IsoToolbox/src/: AnalysisContext.cpp  BinningManager.cpp  ConfigManager.cpp  Logger.cpp  PhysicsConstants.cpp  ProductRegistry.cpp  SplineFitter.cpp  Tool.cpp  Tools.cpp
libs/PhysicsModules/: CMakeLists.txt
libs/PhysicsModules/DataModel/: CMakeLists.txt
libs/PhysicsModules/DataModel/include/DataModel/: AMSDstTreeA.h  AMSEventBuilder.h  StandardizedEvent.h
libs/PhysicsModules/DataModel/src/: AMSDstTreeA.C  AMSDstTreeA.cpp  AMSEventBuilder.cpp
libs/PhysicsModules/HistManager/: CMakeLists.txt
libs/PhysicsModules/HistManager/include/HistManager/: HistManager.h
libs/PhysicsModules/HistManager/src/: HistManager.cpp
libs/PhysicsModules/Selection/: CMakeLists.txt
libs/PhysicsModules/Selection/include/Selection/: CutBase.h  RTICut.h
libs/PhysicsModules/Selection/src/: CutBase.cpp  RTICut.cpp
results_20250831_192737/ISS_Beryllium/: chunk_0000.root
results_20250831_192951/ISS_Beryllium/: chunk_0000.root
scripts/: run_process.py
submit/: ISSBer.sh  ISSBer10.sh  ISSBer7.sh  ISSBer9.sh  ISSBor.sh  ISSLit.sh  ISSOxy16.sh  ISSSi.sh  ISSerr.sh  MCB10.sh  MCB11.sh  MCBe10.sh  MCBe7.sh  MCBe9.sh  MCC12.sh  MCLi6.sh  MCLi7.sh  MCN14.sh  MCN15.sh  MCO16.sh  checkMissing.sh  checklog.sh  cm.sh  co.sh  condorBer10.sub  condorBer7.sub  condorBer9.sub  condorBor.sub  condorLit.sub  condorMCB10.sub  condorMCB11.sub  condorMCBe10.sub  condorMCBe7.sub  condorMCBe9.sub  condorMCC12.sub  condorMCLi6.sub  condorMCLi7.sub  condorMCN14.sub  condorMCN15.sub  condorMCO16.sub  (+5 more)
submit/joblist/: Bererr.txt  Borerr.txt  Li7test.txt  Literr.txt  ad.txt  cp.sh  cp.txt  list_MC_B10.txt  list_MC_B10_test.txt  list_MC_B11.txt  list_MC_Be10.txt  list_MC_Be7.txt  list_MC_Be9.txt  list_MC_C12.txt  list_MC_Li6.txt  list_MC_Li7.txt  list_MC_N14.txt  list_MC_N15.txt  list_MC_O16.txt  list_err.txt  list_jobs.txt  list_jobs_yzx.txt  writeBe.sh
submit/joblist/YanzxDST/: divide.sh  job_list_0.txt  job_list_1.txt  job_list_10.txt  job_list_100.txt  job_list_1000.txt  job_list_1001.txt  job_list_1002.txt  job_list_1003.txt  job_list_1004.txt  job_list_1005.txt  job_list_1006.txt  job_list_1007.txt  job_list_1008.txt  job_list_1009.txt  job_list_101.txt  job_list_1010.txt  job_list_1011.txt  job_list_1012.txt  job_list_1013.txt  job_list_1014.txt  job_list_1015.txt  job_list_1016.txt  job_list_1017.txt  job_list_1018.txt  job_list_1019.txt  job_list_102.txt  job_list_1020.txt  job_list_1021.txt  job_list_1022.txt  job_list_1023.txt  job_list_1024.txt  job_list_1025.txt  job_list_1026.txt  job_list_1027.txt  job_list_1028.txt  job_list_1029.txt  job_list_103.txt  job_list_1030.txt  job_list_1031.txt  (+2912 more)
tasks_20250831_192737/: task_ISS_Beryllium_0000.json
tasks_20250831_192951/: task_ISS_Beryllium_0000.json
tests/: CMakeLists.txt  test_Logger.cpp
useful/: BashFunction.sh  QSplineFit.C  RootFunc.h  TDrawHistGraph.h  amsvar_all.sh  newlist.sh
